/* COMMON */

"Delete" = "Delete";
"OK" = "OK";
"Description" = "Description";


/* TABS */

"Home" = "Home";
"Open" = "Open";
"Closed" = "Closed";
"Awards" = "Awards";
"Community" = "Community";
"Shared Projects" = "Shared Projects";


/* HOME VIEW */
"Delete All" = "Delete All";
"Add Data" = "Add Data";
"Up next" = "Up next";
"More to explore" = "More to explore";
"%@, %lld items, %g%% complete." = "%@, %lld items, %g%% complete.";


/* PROJECTS VIEW */

"Open Projects" = "Open Projects";
"Closed Projects" = "Closed Projects";
"Add Project" = "Add Project";
"Add New Item" = "Add New Item";
"There's nothing here right now." = "There's nothing here right now.";
/* A button that shows a menu with the following options */
"Sort" = "Sort";
"Sort Items" = "Sort Items"; /* The title of the menu */
"Optimized" = "Optimized"; /* Sort using an optimized algorithm */
"Creation Date" = "Creation Date"; /* Sort by the date items were created */
"Title" = "Title"; /* Sort by item title */
"Please select something from the menu to begin." = "Please select something from the menu to begin.";


/* EDIT PROJECT VIEW */

"Are you sure? All items will also be deleted." = "Are you sure? All items will also be deleted.";
"Closing is completion. Deleting removes the project." = "Closing is completion. Deleting removes the project.";
"Description of this project" = "Description of this project";
"Project name" = "Project name";
"Close this project" = "Close this project";
"Delete this project" = "Delete this project";
"Reopen this project" = "Reopen this project";
"Edit Project" = "Edit Project";
"New Project" = "New Project";
"Delete project?" = "Delete project?";
"Select a project color" = "Select a project color";
"Show reminders" = "Show reminders";
"Oops!" = "Oops!";
"There was a problem. Please check you have notifications enabled." = "There was a problem. Please check you have notifications enabled.";
"Check Settings" = "Check Settings";
"Chat about this project…" = "Chat about this project…";
"Enter your Message" = "Enter your Message";
"Reminder time" = "Reminder time";
"Basic Settings" = "Basic Settings";
"Set your project color" = "Set your project color";
"Project Reminders" = "Project Reminders";

/* colors */
"Pink" = "Pink";
"Purple" = "Purple";
"Red" = "Red";
"Orange" = "Orange";
"Gold" = "Gold";
"Indigo" = "Indigo";
"Teal" = "Teal";
"Mint" = "Mint";
"Yellow" = "Yellow";
"Blue" = "Blue";
"Green" = "Green";
"Teal" = "Teal";
"Light Blue" = "Light Blue";
"Dark Blue" = "Dark Blue";
"Midnight" = "Midnight";
"Dark Gray" = "Dark Gray";
"Gray" = "Gray";


/* EDIT ITEM VIEW */

"Item name" = "Item name";
"Edit Item" = "Edit Item";
"Mark Completed" = "Mark Completed";
"New Item" = "New Item";
"%@, completed." = "%@, completed.";
"%@, high priority." = "%@, high priority.";
/* listing priority items */
"Priority" = "Priority";
"High" = "High";
"Medium" = "Medium";
"Low" = "Low";


/* AWARDS VIEW */

"Locked" = "Locked";
"Unlocked: %@" = "Unlocked: %@";


/* SHARE */

"Send" = "Send";
"Sign in to comment" = "Sign in to comment";
"Chat about this project…" = "Chat about this project…";
"Enter your message" = "Enter your message";
"No results" = "No results";


/* UNLOCK PREMIUM */

"Get Unlimited Projects" = "Get Unlimited Projects";
"You can add three projects for free, or pay %@ to add unlimited projects." = "You can add three projects for free, or pay %@ to add unlimited projects.";
"If you already bought the unlock on another device, press Restore Purchases." = "If you already bought the unlock on another device, press Restore Purchases.";
"Restore Purchases" = "Restore Purchases";
"Thank you! Your request is pending approval, but you can carry on using the app in the meantime." = "Thank you! Your request is pending approval, but you can carry on using the app in the meantime.";
"Sorry, there was an error loading the store. Please try again later." = "Sorry, there was an error loading the store. Please try again later.";
"Buy: %@" = "Buy: %@";
"Loading…" = "Loading…";
"Thank you!" = "Thank you!";
"Dismiss" = "Dismiss";


/* SIGN IN VIEW */

"Cancel" = "Cancel";
"Please Sign in" = "Please Sign in";
"In order to keep our community safe, we ask that you sign in before commenting on a project.

We don't track your personal information; your name is used only for display purposes.

Please note: we reserve the right to remove messages that are inappropriate or offensive." = "In order to keep our community safe, we ask that you sign in before commenting on a project.

We don't track your personal information; your name is used only for display purposes.

Please note: we reserve the right to remove messages that are inappropriate or offensive.
";


/* WIDGETS */

"Up next…" = "Up next…";
"Nothing!" = "Nothing!";
"Your #1 top-priority item." = "Your #1 top-priority item.";
"Your most important items." = "Your most important items.";


/* WELCOME SCREEN */

"Welcome to Peanut" = "Welcome to Peanut";
"About Peanut & Privacy…" = "About Peanut & Privacy…";
"Welcome to Peanut" = "Welcome to Peanut";
"Continue" = "Continue";


/* ABOUT SCREEN */

"Peanut & Privacy";
"Peanut Mission Statement" = "Peanut Mission Statement";
"Done" = "Done";

/* SHARED ITEM VIEW */

"Chat About this project…" = "Chat About this project…";
"No results" = "No results";
